demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: 301279253094.dkr.ecr.ap-south-1.amazonaws.com/sterlo:latest
        ports:
        - containerPort: 80
