service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service-1
spec:
  type: ClusterIP
  selector:
    app: nginx-app
  ports:
    - name: http
      port: 80           # Service port
      targetPort: 80     # Pod port
