ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: demo1.techwhiz.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-service
            port:
              number: 80
  - host: demo2.techwhiz.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-service-2
            port:
              number: 5173
